force-app/main/default/objects/ContentVersion/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>