force-app/main/default/objects/ContentVersion/fields/Upload_Source__c.field-meta.xml
<CustomField>
    <fullName>Upload_Source__c</fullName>
    <label>Upload Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal_Upload</fullName>
                <label>Portal Upload</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>